Avoid DCHECK failure on WebXR immersive session transition

The first frame of an immersive session may not yet have frame data
including the expected frame_id and output buffer mailbox holder,
don't treat that as an error. See also https://crbug.com/855722

BUG=868028

Cq-Include-Trybots: luci.chromium.try:win_optional_gpu_tests_rel
Change-Id: Icecd3ea8035ea783a625b11082e736d9609a15f8
Reviewed-on: https://chromium-review.googlesource.com/1153829
Reviewed-by: Brian Sheedy <bsheedy@chromium.org>
Commit-Queue: Klaus Weidner <klausw@chromium.org>
Cr-Commit-Position: refs/heads/master@{#578851}
Former-commit-id: b1471eca807da2c487f3fd775dd0232e0d9006c0